radio button implementation in progress, incl. circle draw fns

--- a/assets/layouts/some_name.xml
+++ b/assets/layouts/some_name.xml
@@ -1,8 +1,8 @@
 <Layout name="some_name" type="NORMAL">
     <x>REL 0</x>
     <y>REL 0</y>
-    <w>SCALE 1.0</w>
-    <h>SCALE 1.0</h>
+    <w>SCALE 1.000000</w>
+    <h>SCALE 1.000000</h>
     <index>0</index>
     <children>
         <Layout name="hslider1" type="NORMAL">
@@ -23,11 +23,11 @@
             <children>
             </children>
         </Layout>
-        <Layout name="tb2" type="NORMAL">
-            <x>SCALE 0.258333</x>
-            <y>REL 273</y>
-            <w>SCALE 0.345000</w>
-            <h>SCALE 0.361481</h>
+        <Layout name="radio1" type="NORMAL">
+            <x>SCALE 0.316667</x>
+            <y>REL 168</y>
+            <w>SCALE 0.322083</w>
+            <h>SCALE 0.361813</h>
             <index>2</index>
             <children>
             </children>
@@ -47,6 +47,15 @@
             <w>REL 50</w>
             <h>REL 50</h>
             <index>4</index>
+            <children>
+            </children>
+        </Layout>
+        <Layout name="tb2" type="NORMAL">
+            <x>REL 320</x>
+            <y>REL 424</y>
+            <w>REL 286</w>
+            <h>REL 162</h>
+            <index>6</index>
             <children>
             </children>
         </Layout>
