track settings tab view; switch track with tv open; tl redraw fixes; multiple tl transport fixes

--- a/assets/layouts/some_name.xml
+++ b/assets/layouts/some_name.xml
@@ -14,7 +14,7 @@
             <children>
             </children>
         </Layout>
-        <Layout name="bandwidth_label" type="NORMAL">
+        <Layout name="irlen_label" type="NORMAL">
             <x>REL 60</x>
             <y>REL 212</y>
             <w>REL 198</w>
