--- a/assets/layouts/track_settings_delay_line.xml
+++ b/assets/layouts/track_settings_delay_line.xml
@@ -106,10 +106,10 @@
                     <x>REL 0</x>
                     <y>STACK 0</y>
                     <w>SCALE 1.000000</w>
-                    <h>SCALE 0.250000</h>
+                    <h>SCALE 0.250951</h>
                     <index>2</index>
                     <children>
-                        <Layout name="offset_L_label" type="NORMAL">
+                        <Layout name="stereo_offset_label" type="NORMAL">
                             <x>REL 0</x>
                             <y>STACK 0</y>
                             <w>SCALE 1.000000</w>
@@ -118,7 +118,7 @@
                             <children>
                             </children>
                         </Layout>
-                        <Layout name="offset_L_slider" type="NORMAL">
+                        <Layout name="stereo_offset_slider" type="NORMAL">
                             <x>REL 0</x>
                             <y>STACK 0</y>
                             <w>SCALE 1.000000</w>
@@ -136,29 +136,11 @@
                     <h>SCALE 0.250000</h>
                     <index>3</index>
                     <children>
-                        <Layout name="offset_R_label" type="NORMAL">
-                            <x>REL 0</x>
-                            <y>STACK 0</y>
-                            <w>SCALE 1.000000</w>
-                            <h>SCALE 0.500000</h>
-                            <index>0</index>
-                            <children>
-                            </children>
-                        </Layout>
-                        <Layout name="offset_R_slider" type="NORMAL">
-                            <x>REL 0</x>
-                            <y>STACK 0</y>
-                            <w>SCALE 1.000000</w>
-                            <h>SCALE 0.500000</h>
-                            <index>1</index>
-                            <children>
-                            </children>
-                        </Layout>
                     </children>
                 </Layout>
             </children>
         </Layout>
-        <Layout name="freq_plot" type="NORMAL">
+        <Layout name="waveform" type="NORMAL">
             <x>SCALE 0.060000</x>
             <y>SCALE 0.557692</y>
             <w>SCALE 0.850000</w>
@@ -168,12 +150,39 @@
             </children>
         </Layout>
         <Layout name="track_selection" type="NORMAL">
-            <x>REL 410</x>
-            <y>REL 19</y>
-            <w>SCALE 0.415000</w>
-            <h>SCALE 0.080981</h>
+            <x>REVREL 10</x>
+            <y>SCALE 0.056632</y>
+            <w>SCALE 0.256667</w>
+            <h>SCALE 0.046200</h>
             <index>4</index>
             <children>
+                <Layout name="track_name" type="NORMAL">
+                    <x>STACK 0</x>
+                    <y>REL 0</y>
+                    <w>REL 100</w>
+                    <h>SCALE 1.000000</h>
+                    <index>0</index>
+                    <children>
+                    </children>
+                </Layout>
+                <Layout name="track_previous" type="NORMAL">
+                    <x>STACK 4</x>
+                    <y>REL 0</y>
+                    <w>REL 100</w>
+                    <h>SCALE 1.000000</h>
+                    <index>1</index>
+                    <children>
+                    </children>
+                </Layout>
+                <Layout name="track_next" type="NORMAL">
+                    <x>STACK 4</x>
+                    <y>REL 0</y>
+                    <w>REL 100</w>
+                    <h>SCALE 1.000000</h>
+                    <index>2</index>
+                    <children>
+                    </children>
+                </Layout>
             </children>
         </Layout>
     </children>
