--- a/assets/layouts/jackdaw_main_layout.xml
+++ b/assets/layouts/jackdaw_main_layout.xml
@@ -12,7 +12,7 @@
             <h>REL 147</h>
             <index>0</index>
             <children>
-                <Layout name="quickref" type="NORMAL">
+                <Layout name="quickref" type="NORMAkL">
                     <x>REL 250</x>
                     <y>REL 33</y>
                     <w>REL 170</w>
@@ -226,168 +226,24 @@
                     <h>COMPLEMENT 231</h>
                     <index>1</index>
                     <children>
-                        <Layout name="track_container" type="NORMAL">
-                            <x>REL 0</x>
-                            <y>REL 4</y>
-                            <w>SCALE 1.000000</w>
-                            <h>REL 96</h>
-                            <index>0</index>
-                            <children>
-                                <Layout name="track_console" type="NORMAL">
-                                    <x>REL 3</x>
-                                    <y>REL 3</y>
-                                    <w>REL 150</w>
-                                    <h>ABS 90</h>
-                                    <index>0</index>
-                                    <children>
-                                        <Layout name="name_row" type="NORMAL">
-                                            <x>REL 0</x>
-                                            <y>REL 0</y>
-                                            <w>SCALE 1.000000</w>
-                                            <h>SCALE 0.250000</h>
-                                            <index>0</index>
-                                            <children>
-                                                <Layout name="name_value" type="NORMAL">
-                                                    <x>REL 0</x>
-                                                    <y>REL 0</y>
-                                                    <w>REL 100</w>
-                                                    <h>SCALE 1.000000</h>
-                                                    <index>0</index>
-                                                    <children>
-                                                    </children>
-                                                </Layout>
-                                                <Layout name="mute_button" type="NORMAL">
-                                                    <x>STACK 2</x>
-                                                    <y>REL 1</y>
-                                                    <w>REL 20</w>
-                                                    <h>REL 20</h>
-                                                    <index>1</index>
-                                                    <children>
-                                                    </children>
-                                                </Layout>
-                                                <Layout name="solo_button" type="NORMAL">
-                                                    <x>STACK 2</x>
-                                                    <y>REL 1</y>
-                                                    <w>REL 20</w>
-                                                    <h>REL 20</h>
-                                                    <index>2</index>
-                                                    <children>
-                                                    </children>
-                                                </Layout>
-                                            </children>
-                                        </Layout>
-                                        <Layout name="vol_row" type="NORMAL">
-                                            <x>REL 0</x>
-                                            <y>SCALE 0.250000</y>
-                                            <w>SCALE 1.000000</w>
-                                            <h>SCALE 0.250000</h>
-                                            <index>1</index>
-                                            <children>
-                                                <Layout name="vol_label" type="NORMAL">
-                                                    <x>REL 0</x>
-                                                    <y>REL 0</y>
-                                                    <w>REL 30</w>
-                                                    <h>SCALE 1.000000</h>
-                                                    <index>0</index>
-                                                    <children>
-                                                    </children>
-                                                </Layout>
-                                                <Layout name="vol_slider" type="NORMAL">
-                                                    <x>REL 30</x>
-                                                    <y>REL 0</y>
-                                                    <w>COMPLEMENT 0</w>
-                                                    <h>SCALE 1.000000</h>
-                                                    <index>1</index>
-                                                    <children>
-                                                    </children>
-                                                </Layout>
-                                            </children>
-                                        </Layout>
-                                        <Layout name="pan_row" type="NORMAL">
-                                            <x>REL 0</x>
-                                            <y>SCALE 0.500000</y>
-                                            <w>SCALE 1.000000</w>
-                                            <h>SCALE 0.250000</h>
-                                            <index>2</index>
-                                            <children>
-                                                <Layout name="pan_label" type="NORMAL">
-                                                    <x>REL 0</x>
-                                                    <y>REL 0</y>
-                                                    <w>REL 30</w>
-                                                    <h>SCALE 1.000000</h>
-                                                    <index>0</index>
-                                                    <children>
-                                                    </children>
-                                                </Layout>
-                                                <Layout name="pan_slider" type="NORMAL">
-                                                    <x>REL 30</x>
-                                                    <y>REL 0</y>
-                                                    <w>COMPLEMENT 1062557013</w>
-                                                    <h>SCALE 1.000000</h>
-                                                    <index>1</index>
-                                                    <children>
-                                                    </children>
-                                                </Layout>
-                                            </children>
-                                        </Layout>
-                                        <Layout name="in_row" type="NORMAL">
-                                            <x>REL 0</x>
-                                            <y>SCALE 0.750000</y>
-                                            <w>SCALE 1.000000</w>
-                                            <h>SCALE 0.250000</h>
-                                            <index>3</index>
-                                            <children>
-                                                <Layout name="in_label" type="NORMAL">
-                                                    <x>REL 0</x>
-                                                    <y>REL 0</y>
-                                                    <w>REL 30</w>
-                                                    <h>SCALE 1.000000</h>
-                                                    <index>0</index>
-                                                    <children>
-                                                    </children>
-                                                </Layout>
-                                                <Layout name="in_value" type="NORMAL">
-                                                    <x>STACK 0</x>
-                                                    <y>REL 1</y>
-                                                    <w>ABS 110</w>
-                                                    <h>REL 20</h>
-                                                    <index>1</index>
-                                                    <children>
-                                                    </children>
-                                                </Layout>
-                                            </children>
-                                        </Layout>
-                                        <Layout name="colorbar" type="NORMAL">
-                                            <x>STACK 0</x>
-                                            <y>REL -3</y>
-                                            <w>REL 8</w>
-                                            <h>REL 96</h>
-                                            <index>4</index>
-                                            <children>
-                                            </children>
-                                        </Layout>
-                                    </children>
-                                </Layout>
-                            </children>
-                        </Layout>
-                        <Layout name="audio_rect_pad" type="NORMAL">
-                            <x>REL 0</x>
-                            <y>REL 0</y>
-                            <w>REL 161</w>
-                            <h>SCALE 1.000000</h>
-                            <index>1</index>
-                            <children>
-                            </children>
-                        </Layout>
-                        <Layout name="audio_rect" type="NORMAL">
-                            <x>STACK 0</x>
-                            <y>REL 0</y>
-                            <w>COMPLEMENT 0</w>
-                            <h>SCALE 1.000000</h>
-                            <index>2</index>
-                            <children>
-                            </children>
-                        </Layout>
+                    </children>
+                </Layout>
+                <Layout name="audio_rect_pad" type="NORMAL">
+                    <x>REL 0</x>
+                    <y>REL 28</y>
+                    <w>REL 161</w>
+                    <h>COMPLEMENT 1064526170</h>
+                    <index>2</index>
+                    <children>
+                    </children>
+                </Layout>
+                <Layout name="audio_rect" type="NORMAL">
+                    <x>REL 161</x>
+                    <y>REL 28</y>
+                    <w>COMPLEMENT 1056949981</w>
+                    <h>COMPLEMENT 1056964608</h>
+                    <index>3</index>
+                    <children>
                     </children>
                 </Layout>
             </children>
