draw fixes; console; better mixdown logic

--- a/assets/layouts/track_automation.xml
+++ b/assets/layouts/track_automation.xml
@@ -1,36 +1,72 @@
 <Layout name="track_automation" type="NORMAL">
-  <x>REL 0</x>
-  <y>STACK 4</y>
-  <w>SCALE 1.000000</w>
-  <h>REL 60</h>
-  <index>0</index>
-  <children>
-    <Layout name="automation_console" type="NORMAL">
-      <x>REL 2</x>
-      <y>REL 0</y>
-      <w>REL 150</w>
-      <h>SCALE 1.0</h>
-      <index>0</index>
-      <children>
-      </children>
-    </Layout>
-    <Layout name="colorbar" type="NORMAL">
-      <x>STACK 0</x>
-      <y>REL 0</y>
-      <w>REL 8</w>
-      <h>SCALE 1.0</h>
-      <index>0</index>
-      <children>
-      </children>
-    </Layout>
-    <Layout name="main" type="NORMAL">
-      <x>STACK 0</x>
-      <y>REL 0</y>
-      <w>COMPLEMENT 0</w>
-      <h>SCALE 1.0</h>
-      <index>0</index>
-      <children>
-      </children>
-    </Layout>
-  </children>
+    <x>REL 0</x>
+    <y>STACK 4</y>
+    <w>SCALE 1.000000</w>
+    <h>REL 60</h>
+    <index>0</index>
+    <children>
+        <Layout name="automation_console" type="NORMAL">
+            <x>REL 2</x>
+            <y>REL 0</y>
+            <w>REL 150</w>
+            <h>SCALE 1.000000</h>
+            <index>0</index>
+            <children>
+                <Layout name="label" type="NORMAL">
+                    <x>REL 25</x>
+                    <y>REL 5</y>
+                    <w>REL 140</w>
+                    <h>REL 22</h>
+                    <index>0</index>
+                    <children>
+                    </children>
+                </Layout>
+                <Layout name="readwrite_row" type="NORMAL">
+                    <x>REL 25</x>
+                    <y>REL 30</y>
+                    <w>REL 140</w>
+                    <h>REL 25</h>
+                    <index>1</index>
+                    <children>
+                        <Layout name="read" type="NORMAL">
+                            <x>REL 0</x>
+                            <y>REL 0</y>
+                            <w>REL 75</w>
+                            <h>SCALE 1.000000</h>
+                            <index>0</index>
+                            <children>
+                            </children>
+                        </Layout>
+                        <Layout name="write" type="NORMAL">
+                            <x>STACK 8</x>
+                            <y>REL 0</y>
+                            <w>REL 65</w>
+                            <h>SCALE 1.000000</h>
+                            <index>1</index>
+                            <children>
+                            </children>
+                        </Layout>
+                    </children>
+                </Layout>
+            </children>
+        </Layout>
+        <Layout name="colorbar" type="NORMAL">
+            <x>STACK 0</x>
+            <y>REL 0</y>
+            <w>REL 8</w>
+            <h>SCALE 1.000000</h>
+            <index>1</index>
+            <children>
+            </children>
+        </Layout>
+        <Layout name="main" type="NORMAL">
+            <x>STACK 0</x>
+            <y>REL 0</y>
+            <w>COMPLEMENT 0</w>
+            <h>SCALE 1.000000</h>
+            <index>2</index>
+            <children>
+            </children>
+        </Layout>
+    </children>
 </Layout>
